--- a/index.html
+++ b/index.html
@@ -1,47 +1,121 @@
 <DOCTYPR! html>
-	<html>
-		<head>
-    		<link rel="stylesheet" type="text/css" href="style.css">
-    		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1">
-    		<title>Games</title>
-		</head>
-		<body>
-			<p id="header">Games</p>
-			<p class="links">
-				<a href='spacecompany/index.html'>space company</a>
-				<br>
-				<a href='tetris/index.html'>mimtris</a>
-				<br>
-				<a href='breaklock/index.html'>break lock</a>
-				<br>
-				<a href='duckhunt/index.html'>duck hunt</a>
-				<br>
-				<a href='dino.html'>dino</a>
-				<br>
-				<a href='snake.html'>snake</a>
-				<br>
-				<a href='2048.html'>2048</a>
-				<br>
-				<a href='drowning.html'>drowning</a>
-				<br>
-				<a href='pong.html'>pong</a>
-				<br>
-				<a href='breakout.html'>breakout</a>
-				<br>
-				<a href='inmario/main.html'>infinite mario</a>
-				<br>
-				<a href='pixeldefense/src/index.html'>pixel defense</a>
-				<br>
-
-			</p>
-			<p id="bottom">
-				click <a href="				https://docs.google.com/document/d/1VEXHFU7IHfJIx1_u30pgILJTteUdEk1dJ-yvhPug5AQ/edit?usp=sharing" data-bs-toggle="tooltip" title="Url Doc">here</a> for doc to check if it gets blocked
-				<br>
-				click <a href="https://docs.google.com/forms/d/e/1FAIpQLScgs34_n8S3EYc7GPwdVfIJ1m7bWz50wUz1e8FlRjkrKnjCQA/viewform?usp=sf_link" data-bs-toggle="tooltip" title="Request Form">here</a> for game request form
-			</p>
-		</body>
-	</html>
+  <html>
+    <head>
+      <link rel="stylesheet" type="text/css" href="style.css" />
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
+        crossorigin="anonymous"
+      ></script>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <title>Games</title>
+    </head>
+    <body>
+      <p id="header">Games</p>
+      <p class="links">
+        <a href="spacecompany/index.html" 
+           data-bs-toggle="tooltip" 
+           title="space company"
+          >space company</a
+        >
+        <br />
+        <a href="tetris/index.html" 
+           data-bs-toggle="tooltip" 
+           title="mimtris"
+          >mimtris</a
+        >
+        <br />
+        <a href="breaklock/index.html" 
+           data-bs-toggle="tooltip" 
+           title="breaklock WIP"
+          >break lock</a
+        >
+        <br />
+        <a href="duckhunt/index.html" 
+           data-bs-toggle="tooltip" 
+           title="duckhunt"
+          >duck hunt</a
+        >
+        <br />
+        <a href="dino.html" 
+           data-bs-toggle="tooltip" 
+           title="dino game"
+           >dino</a
+        >
+        <br />
+        <a href="snake.html" 
+           data-bs-toggle="tooltip" 
+           title="snake"
+           >snake</a
+        >
+        <br />
+        <a href="2048.html" 
+           data-bs-toggle="tooltip" 
+           title="2048"
+           >2048</a
+        >
+        <br />
+        <a href="drowning.html" 
+           data-bs-toggle="tooltip" 
+           title="drowning"
+            >drowning</a
+        >
+        <br />
+        <a href="pong.html" 
+           data-bs-toggle="tooltip" 
+           title="pong"
+           >pong</a
+        >
+        <br />
+        <a href="breakout.html" 
+           data-bs-toggle="tooltip" 
+           title="breakout"
+           >breakout</a
+        >
+        <br />
+        <a href="inmario/main.html" 
+           data-bs-toggle="tooltip" 
+           title="infinite mario WIP"
+          >infinite mario</a
+        >
+        <br />
+        <a href="pixeldefense/src/index.html" 
+           data-bs-toggle="tooltip" 
+           title="pixel defense WIP"
+          >pixel defense</a
+        >
+        <br />
+      </p>
+      <p id="bottom">
+        click
+        <a
+          href="https://docs.google.com/document/d/1VEXHFU7IHfJIx1_u30pgILJTteUdEk1dJ-yvhPug5AQ/edit?usp=sharing"
+          data-bs-toggle="tooltip"
+          title="Url Doc"
+          >here</a
+        >
+        for doc to check if it gets blocked
+        <br />
+        click
+        <a
+          href="https://docs.google.com/forms/d/e/1FAIpQLScgs34_n8S3EYc7GPwdVfIJ1m7bWz50wUz1e8FlRjkrKnjCQA/viewform?usp=sf_link"
+          data-bs-toggle="tooltip"
+          title="Request Form"
+          >here</a
+        >
+        for game request form
+      </p>
+    </body>
+  </html>
+</DOCTYPR!>
